# coinmarket

./: Cargo.toml  README.md  default.nix  flake.nix
src/: errors.rs  main.rs  tui.rs
