[package]
name = "coinmarket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance-rs-async = { version = "1.3.3", features = ["rustls-tls"] }
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
env_logger = "0.11.2"
futures = "0.3.30"
lazy_static = "1.4.0"
libc = "0.2.153"
log = "0.4.20"
ratatui = { version = "0.26.1", features = ["serde", "macros"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
signal-hook = "0.3.17"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.9"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
tui-textarea = "0.4.0"
unicode-width = "0.1"
